2012-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-send-authinfo): Work for secure nntp entry in authinfo.

2012-02-20  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-shr): Remove "soft hyphens".

	* nnimap.el (nnimap-request-list): Return the group names encoded as
	utf8.  Otherwise non-European group names don't work.
	(nnimap-request-newgroups): Ditto.

	* gnus-sum.el (gnus-summary-insert-old-articles): Fix the syntax for
	the default in `read-string' (bug#10757).

	* gnus-msg.el (gnus-group-post-news): Don't bug out on `C-u a' on
	topics (bug#10843).

	* nnimap.el (nnimap-log-command): Add the IMAP address to the log
	buffer.  Suggested by Herbert Valerio Riedel.
	(nnimap-request-move-article): Delete the message from the correct IMAP
	server.

2012-02-19  Vida Gábor  <vidagabor@gmail.com>  (tiny change)

	* gnus-demon.el (gnus-demon-init): Don't multiply time twice.
	Reported by Peter Münster.

2012-02-18  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-image-fetched): Make sure we really kill the right
	buffer.

2012-02-16  Leo Liu  <sdl.web@gmail.com>

	* gnus-start.el (gnus-1): Avoid duplicate entries.

2012-02-15  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-remove-trailing-whitespace): Really delete the padding on
	too-wide lines.

2012-02-15  Paul Eggert  <eggert@cs.ucla.edu>

	* shr.el (shr-rescale-image): Undo previous change; see
	<http://lists.gnu.org/archive/html/emacs-devel/2012-02/msg00540.html>.

2012-02-13  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-record-commands): New variable.
	(nnimap-log-command): Use it.
	(nnimap-make-process-buffer): Add a space to the process buffer.
	(nnimap-transform-headers): Don't bug out on header lines containing
	stuff that look like IMAP length encodings.

	* shr.el (shr-rescale-image): Allow viewing large images.

2012-02-12  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnml.el (nnml-request-compact-group): Delete the marks file after
	compaction (bug#10800).
